H2, gitignore, конфиг